PHOTOGRAPHER PAGE - html base

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -38,7 +38,7 @@
         <div class="homepage-title">
             <h1>Nos photographes</h1>
         </div>
-        <div class="homepage-photographers" aria-label="photographers presentation">
+        <div class="photographers" aria-label="photographers presentation">
             <div class="photographer" id="photographer">
                 <a href="" aria-label="" class="photographer__main-block">
                     <figure role="group" aria-labelledby="">
@@ -52,8 +52,9 @@
                 <p class="photographer__price" id="price"></p>
             </div>
         </div>
-
     </main>
+
+    <script src="./index.js"></script>
 </body>
 
 </html>
