--- a/app/src/html/photographer.html
+++ b/app/src/html/photographer.html
@@ -22,7 +22,7 @@
     <div class="header-wrapper">
         <header class="header" role="banner">
             <div class="header__logo-wrapper">
-                <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
+                <a href="../index.html" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
             </div>
         </header>
     </div>
