--- a/app/src/index.html
+++ b/app/src/index.html
@@ -43,7 +43,7 @@
                 <a href="" aria-label="" class="photographer__main-block">
                     <figure role="group" aria-labelledby="">
                         <img src="" alt="" id="pres-picture">
-                        <figcaption id="name"></figcaption>
+                        <figcaption><h2 id="name"></h2></figcaption>
                     </figure>
                 </a>
                 <p class="photographer__location" id="location"></p>
