HOMEPAGE - Header base scss

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -29,12 +29,23 @@
                 <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
             </div>
             <nav class="header__nav" id="tags__nav" aria-label="photographer categories" role="navigation">
-                <a href="" class="nav-tag" id="nav-tag"></a>
+                <a href="" class="nav-tag" id="nav-tag">ABCD</a>
+                <a href="" class="nav-tag" id="nav-tag">EFGH</a>
+                <a href="" class="nav-tag" id="nav-tag">IJKL</a>
+                <a href="" class="nav-tag" id="nav-tag">MNOP</a>
+                <a href="" class="nav-tag" id="nav-tag">ABCD</a>
+                <a href="" class="nav-tag" id="nav-tag">EFGH</a>
+                <a href="" class="nav-tag" id="nav-tag">IJKL</a>
+                <a href="" class="nav-tag" id="nav-tag">MNOP</a>
+                <a href="" class="nav-tag" id="nav-tag">ABCD</a>
+                <a href="" class="nav-tag" id="nav-tag">EFGH</a>
+                <a href="" class="nav-tag" id="nav-tag">IJKL</a>
+                <a href="" class="nav-tag" id="nav-tag">MNOP</a>
             </nav>
         </header>
     </div>
 
-    <main id="homepage-content" class="homepage-content-wrapper">
+    <main id="homepage-content" class="homepage-content">
         <div class="homepage-title">
             <h1>Nos photographes</h1>
         </div>
