HOMEPAGE + PHOTOGRAPHER PAGE - modifications of html photographer infos block + adding scss layout for it

--- a/app/src/html/photographer.html
+++ b/app/src/html/photographer.html
@@ -29,20 +29,18 @@
 
     <main id="photographer-content" class="photographer-content-wrapper">
 
-        <section class="photographer" id="photographer" aria-label="photographer presentation">
-            <a href="" aria-label="" class="photographer__main-block">
-                <figure role="group" aria-labelledby="">
-                    <img src="" alt="" id="pres-picture">
-                    <figcaption id="name"></figcaption>
-                </figure>
-            </a>
-            <p class="photographer__location" id="location"></p>
-            <p class="photographer__text" id="tagline"></p>
-            <div class="photographer__tags" id="tags"></div>
-            <div class="bottom-infos" id="bottom-infos">
-                <p class="photographer__likes" id="likes"></p>
-                <p class="photographer__price" id="price"></p>
-            </div>
+        <section>
+            <div class="photographer-infos" id="photographer" aria-label="photographer presentation">
+                <img src="" alt="" id="pres-picture">
+                <h1 id="name"></h1>
+                <h2 class="photographer__location" id="location"></h2>
+                <h3 class="photographer__tagline" id="tagline"></h3>
+                <div class="photographer__tags" id="tags"></div>
+                <div class="bottom-infos" id="bottom-infos">
+                    <h4 class="photographer__likes" id="likes"></h4>
+                    <h4 class="photographer__price" id="price"></h4>
+                </div>
+            </div> 
         </section>
 
         <section class="gallery-wrapper" id="gallery-section" aria-label="photographer collection section">
@@ -67,9 +65,9 @@
                         <img src="" alt="">
                     </a>
                     <div class="photo-infos" aria-label="photo infos">
-                        <p class="photo-title" id="photo-title"></p>
-                        <p class="photo-price" id="photo-price"></p>
-                        <p class="photo-likes" id="photo-likes"></p>
+                        <h5 class="photo-title" id="photo-title"></h5>
+                        <h5 class="photo-price" id="photo-price"></h5>
+                        <h5 class="photo-likes" id="photo-likes"></h5>
                     </div>
                 </li>
             </ul>     
