--- a/app/src/index.html
+++ b/app/src/index.html
@@ -49,18 +49,16 @@
         <div class="homepage-title">
             <h1>Nos photographes</h1>
         </div>
-        <div class="photographers" aria-label="photographers presentation">
-            <div class="photographer" id="photographer">
+        <div class="photographers" aria-label="photographers presentation list">
+            <div class="photographer-infos-home" id="photographer">
                 <a href="" aria-label="" class="photographer__main-block">
-                    <figure role="group" aria-labelledby="">
-                        <img src="" alt="" id="pres-picture">
-                        <figcaption><h2 id="name"></h2></figcaption>
-                    </figure>
+                    <img src="" alt="" id="pres-picture">
+                    <h2 id="name"></h2>
                 </a>
-                <p class="photographer__location" id="location"></p>
-                <p class="photographer__text" id="tagline"></p>
+                <h3 class="photographer__location" id="location"></h3>
+                <h4 class="photographer__tagline" id="tagline"></h4>
+                <h5 class="photographer__price" id="price"></h5>
                 <div class="photographer__tags" id="tags"></div>
-                <p class="photographer__price" id="price"></p>
             </div>
         </div>
     </main>
