SCSS elements BEM+style base

--- a/app/src/html/photographer.html
+++ b/app/src/html/photographer.html
@@ -30,13 +30,13 @@
     <main id="photographer-content" class="photographer-content-wrapper">
 
         <section>
-            <div class="photographer-infos" id="photographer" aria-label="photographer presentation">
-                <img src="" alt="" id="pres-picture">
-                <h1 id="name"></h1>
-                <h2 class="photographer__location" id="location"></h2>
-                <h3 class="photographer__tagline" id="tagline"></h3>
-                <div class="photographer__tags" id="tags"></div>
-                <div class="bottom-infos" id="bottom-infos">
+            <div class="photographer" id="photographer" aria-label="photographer presentation">
+                <img class="photographer__pic--page" src="" alt="" id="pres-picture">
+                <h1 class="photographer__name--page" id="name"></h1>
+                <h2 class="photographer__location--page" id="location"></h2>
+                <h3 class="photographer__tagline--page" id="tagline"></h3>
+                <div class="photographer__tags-list--page tags-list--page" id="tags"></div>
+                <div class="photographer__bottom-infos" id="bottom-infos">
                     <h4 class="photographer__likes" id="likes"></h4>
                     <h4 class="photographer__price" id="price"></h4>
                 </div>
@@ -68,6 +68,7 @@
                         <h5 class="photo-title" id="photo-title"></h5>
                         <h5 class="photo-price" id="photo-price"></h5>
                         <h5 class="photo-likes" id="photo-likes"></h5>
+                        <img class="like-icon" src="../assets/icons/heart-icon.png" alt="heart icon">
                     </div>
                 </li>
             </ul>     
