--- a/app/src/index.html
+++ b/app/src/index.html
@@ -28,7 +28,7 @@
             <div class="header__logo-wrapper">
                 <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
             </div>
-            <nav class="header__nav" id="tags__nav" aria-label="photographer categories" role="navigation">
+            <nav class="header__nav tags-list--home" id="tags__nav" aria-label="photographer categories" role="navigation">
                 <a href="" class="nav-tag" id="nav-tag">ABCD</a>
                 <a href="" class="nav-tag" id="nav-tag">EFGH</a>
                 <a href="" class="nav-tag" id="nav-tag">IJKL</a>
@@ -50,16 +50,19 @@
             <h1>Nos photographes</h1>
         </div>
         <div class="photographers" aria-label="photographers presentation list">
-            <div class="photographer-infos-home" id="photographer">
+            <div class="photographer--home" id="photographer" aria-label="photographer presentation">
                 <a href="" aria-label="" class="photographer__main-block">
-                    <img src="" alt="" id="pres-picture">
-                    <h2 id="name"></h2>
+                    <img class="photographer__pic" src="" alt="" id="pres-picture">
+                    <h2 class="photographer__name--home" id="name"></h2>
                 </a>
-                <h3 class="photographer__location" id="location"></h3>
-                <h4 class="photographer__tagline" id="tagline"></h4>
-                <h5 class="photographer__price" id="price"></h5>
-                <div class="photographer__tags" id="tags"></div>
+                <h3 class="photographer__location-home" id="location"></h3>
+                <h4 class="photographer__tagline-home" id="tagline"></h4>
+                <h5 class="photographer__price-home" id="price"></h5>
+                <div class="photographer__tags-list--home" id="tags"></div>
             </div>
+        </div>
+        <div class="nav-help" id="nav-help">
+            <a href="" aria-label="go to main content"><span>passer au contenu</span></a>
         </div>
     </main>
 
