--- a/app/src/index.html
+++ b/app/src/index.html
@@ -28,7 +28,7 @@
             <div class="header__logo-wrapper">
                 <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
             </div>
-            <nav class="header__nav tags-list--home" id="tags__nav" aria-label="photographer categories" role="navigation">
+            <nav class="header__nav tags-list tags-list--home" id="tags__nav" aria-label="photographer categories" role="navigation">
                 <a href="" class="nav-tag" id="nav-tag">ABCD</a>
                 <a href="" class="nav-tag" id="nav-tag">EFGH</a>
                 <a href="" class="nav-tag" id="nav-tag">IJKL</a>
@@ -50,15 +50,23 @@
             <h1>Nos photographes</h1>
         </div>
         <div class="photographers" aria-label="photographers presentation list">
-            <div class="photographer--home" id="photographer" aria-label="photographer presentation">
-                <a href="" aria-label="" class="photographer__main-block">
-                    <img class="photographer__pic" src="" alt="" id="pres-picture">
-                    <h2 class="photographer__name--home" id="name"></h2>
-                </a>
-                <h3 class="photographer__location-home" id="location"></h3>
-                <h4 class="photographer__tagline-home" id="tagline"></h4>
-                <h5 class="photographer__price-home" id="price"></h5>
-                <div class="photographer__tags-list--home" id="tags"></div>
+            <div class="photographer photographer--home" id="photographer" aria-label="photographer presentation">
+                <div class="photographer__main-block">
+                    <a href="" aria-label="">
+                        <img class="photographer__pic home" src="assets/img/Photographers_ID_photos/S/EllieRoseWilkens_S.jpg" alt="" id="pres-picture">
+                        <h2 class="photographer__name home" id="name">name</h2>
+                    </a>
+                </div>
+                <div class="photographer__text-infos" aria-label="photographer infos">
+                    <h3 class="photographer__location home" id="location">location</h3>
+                    <h4 class="photographer__tagline home" id="tagline">tagline</h4>
+                    <h5 class="photographer__price home" id="price">price</h5>
+                    <div class="photographer__tags-list tags-list home" id="tags">
+                        <a href="" class="nav-tag" id="nav-tag">ABCD</a>
+                        <a href="" class="nav-tag" id="nav-tag">EFGH</a>
+                        <a href="" class="nav-tag" id="nav-tag">IJKL</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="nav-help" id="nav-help">
