--- a/app/src/index.html
+++ b/app/src/index.html
@@ -29,18 +29,14 @@
                 <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
             </div>
             <nav class="header__nav tags-list tags-list--home" id="tags__nav" aria-label="photographer categories" role="navigation">
-                <a href="" class="nav-tag" id="nav-tag">ABCD</a>
-                <a href="" class="nav-tag" id="nav-tag">EFGH</a>
-                <a href="" class="nav-tag" id="nav-tag">IJKL</a>
-                <a href="" class="nav-tag" id="nav-tag">MNOP</a>
-                <a href="" class="nav-tag" id="nav-tag">ABCD</a>
-                <a href="" class="nav-tag" id="nav-tag">EFGH</a>
-                <a href="" class="nav-tag" id="nav-tag">IJKL</a>
-                <a href="" class="nav-tag" id="nav-tag">MNOP</a>
-                <a href="" class="nav-tag" id="nav-tag">ABCD</a>
-                <a href="" class="nav-tag" id="nav-tag">EFGH</a>
-                <a href="" class="nav-tag" id="nav-tag">IJKL</a>
-                <a href="" class="nav-tag" id="nav-tag">MNOP</a>
+                <a href="" class="nav-tag" id="nav-tag">azds</a>
+                <a href="" class="nav-tag" id="nav-tag">ffdd</a>
+                <a href="" class="nav-tag" id="nav-tag">Ifdfdfd</a>
+                <a href="" class="nav-tag" id="nav-tag">fdfdfdfdfd</a>
+                <a href="" class="nav-tag" id="nav-tag">fdcx</a>
+                <a href="" class="nav-tag" id="nav-tag">rzazaza</a>
+                <a href="" class="nav-tag" id="nav-tag">nnnn</a>
+                <a href="" class="nav-tag" id="nav-tag">ppp</a>
             </nav>
         </header>
     </div>
