PHOTOGRAPHER PROFILE base styling

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -28,7 +28,7 @@
             <div class="header__logo-wrapper">
                 <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
             </div>
-            <nav class="header__nav tags-list tags-list--home" id="tags__nav" aria-label="photographer categories" role="navigation">
+            <nav class="header__nav tags-list home" id="header-nav" aria-label="photographer categories" role="navigation">
                 <a href="" class="nav-tag" id="nav-tag">azds</a>
                 <a href="" class="nav-tag" id="nav-tag">ffdd</a>
                 <a href="" class="nav-tag" id="nav-tag">Ifdfdfd</a>
@@ -58,9 +58,9 @@
                     <h4 class="photographer__tagline home" id="tagline">tagline</h4>
                     <h5 class="photographer__price home" id="price">price</h5>
                     <div class="photographer__tags-list tags-list home" id="tags">
-                        <a href="" class="nav-tag" id="nav-tag">ABCD</a>
-                        <a href="" class="nav-tag" id="nav-tag">EFGH</a>
-                        <a href="" class="nav-tag" id="nav-tag">IJKL</a>
+                        <a href="" class="nav-tag" id="nav-tag">rerere</a>
+                        <a href="" class="nav-tag" id="nav-tag">rerere</a>
+                        <a href="" class="nav-tag" id="nav-tag">Ibvvv</a>
                     </div>
                 </div>
             </div>
