--- a/app/src/index.html
+++ b/app/src/index.html
@@ -45,6 +45,7 @@
         <div class="homepage-title">
             <h1>Nos photographes</h1>
         </div>
+        <photographer-component></photographer-component>
         <div class="photographers" aria-label="photographers presentation list">
             <div class="photographer photographer--home" id="photographer" aria-label="photographer presentation">
                 <div class="photographer__main-block">
@@ -70,7 +71,9 @@
         </div>
     </main>
 
-    <script src="./index.js"></script>
+    <script src="./index.js" type="text/javascript"></script>
+    <!-- custom components -->
+    <script src="./js-components/photographer.js" type="text/javascript"></script>
 </body>
 
 </html>
