--- a/app/src/index.html
+++ b/app/src/index.html
@@ -18,6 +18,8 @@
 
     <!-- Font awesome cdn -->
     <script src="https://kit.fontawesome.com/711ecd1ff8.js" crossorigin="anonymous"></script>
+    <!-- custom components -->
+    <script src="./js-components/photographer.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="./css/style.css" />
 </head>
@@ -45,9 +47,10 @@
         <div class="homepage-title">
             <h1>Nos photographes</h1>
         </div>
-        <photographer-component></photographer-component>
         <div class="photographers" aria-label="photographers presentation list">
-            <div class="photographer photographer--home" id="photographer" aria-label="photographer presentation">
+            <photographer-component></photographer-component>
+
+        <!--  <div class="photographer photographer--home" id="photographer" aria-label="photographer presentation">
                 <div class="photographer__main-block">
                     <a href="" aria-label="">
                         <img class="photographer__pic home" src="assets/img/Photographers_ID_photos/S/EllieRoseWilkens_S.jpg" alt="" id="pres-picture">
@@ -64,7 +67,7 @@
                         <a href="" class="nav-tag" id="nav-tag">Ibvvv</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="nav-help" id="nav-help">
             <a href="" aria-label="go to main content"><span>passer au contenu</span></a>
@@ -72,8 +75,7 @@
     </main>
 
     <script src="./index.js" type="text/javascript"></script>
-    <!-- custom components -->
-    <script src="./js-components/photographer.js" type="text/javascript"></script>
+
 </body>
 
 </html>
