JS - creating photgrapher factory

--- a/app/src/html/photographer.html
+++ b/app/src/html/photographer.html
@@ -29,8 +29,7 @@
 
     <main id="photographer-content" class="photographer-content-wrapper">
 
-        <section>
-            <div class="photographer photographer--page" id="photographer" aria-label="photographer presentation">
+        <section class="photographer photographer--page" id="photographer" aria-label="photographer presentation">
                 <img class="photographer__pic page" src="../assets/img/Photographers_ID_photos/S/EllieRoseWilkens_S.jpg" alt="" id="pres-picture">
                 <div class="photographer__text-infos">
                     <h1 class="photographer__name page" id="name">name</h1>
@@ -46,7 +45,6 @@
                     <h4 class="photographer__likes" id="likes">45 667</h4>
                     <h4 class="photographer__price" id="price">78€</h4>
                 </div>
-            </div> 
         </section>
 
         <section class="gallery-wrapper" id="gallery-section" aria-label="photographer collection section">
