--- a/app/src/index.html
+++ b/app/src/index.html
@@ -47,8 +47,9 @@
         <div class="homepage-title">
             <h1>Nos photographes</h1>
         </div>
-        <div class="photographers" aria-label="photographers presentation list">
+        <section class="photographers" id="photographersList" aria-label="photographers presentation list">
             <photographer-component></photographer-component>
+        </section>
 
         <!--  <div class="photographer photographer--home" id="photographer" aria-label="photographer presentation">
                 <div class="photographer__main-block">
@@ -68,7 +69,6 @@
                     </div>
                 </div>
             </div> -->
-        </div>
         <div class="nav-help" id="nav-help">
             <a href="" aria-label="go to main content"><span>passer au contenu</span></a>
         </div>
