--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,10 @@
     <!-- Font awesome cdn -->
     <script src="https://kit.fontawesome.com/711ecd1ff8.js" crossorigin="anonymous"></script>
     <!-- custom components -->
-    <script src="./js-components/photographer.js" type="text/javascript"></script>
+    <script src="./app/utils/photographerFactory.js" type="text/javascript"></script>
+    <script src="./app/utils/photographer.js" type="text/javascript"></script>
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./main.css" />
 </head>
 
 <body>
@@ -74,8 +75,6 @@
         </div>
     </main>
 
-    <script src="./index.js" type="text/javascript"></script>
-
+    <script src="./app/app.js" type="text/javascript"></script>
 </body>
-
 </html>
