--- a/src/index.html
+++ b/src/index.html
@@ -76,5 +76,7 @@
     </main>
 
     <script src="./app/app.js" type="text/javascript"></script>
+    <script src="../dist/main.js" type="text/javascript"></script>
+
 </body>
 </html>
