--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
     <!-- Font awesome cdn -->
     <script src="https://kit.fontawesome.com/711ecd1ff8.js" crossorigin="anonymous"></script>
     <!-- custom components -->
-    <script src="./app/utils/photographerFactory.js" type="text/javascript"></script>
-    <script src="./app/utils/photographer.js" type="text/javascript"></script>
+    <!-- <script src="./app/utils/photographerFactory.js" type="text/javascript"></script>
+    <script src="./app/utils/photographer.js" type="text/javascript"></script> -->
 
     <link rel="stylesheet" href="./main.css" />
 </head>
