--- a/src/template.html
+++ b/src/template.html
@@ -75,8 +75,9 @@
         </div>
     </main>
 
-    <script src="./app/app.js" type="text/javascript"></script>
-    <script src="../dist/main.js" type="text/javascript"></script>
+    <!-- removed, following contenthash logic -->
+<!-- <script src="./app/app.js" type="text/javascript"></script>
+    <script src="../dist/main.js" type="text/javascript"></script> -->
 
 </body>
 </html>
