--- a/src/html/photographer.html
+++ b/src/html/photographer.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="http://example.com/image.jpg" />
     <meta property="og:description" content="" />
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <!-- <link rel="stylesheet" href="../css/style.css" /> -->
 </head>
 
 <body>
@@ -78,7 +78,7 @@
             </ul>     
         </section>
     </main>
-    <script src="../index.js"></script>
+    <!-- <script src="../index.js"></script> -->
 </body>
 
 </html>
