--- a/src/template.html
+++ b/src/template.html
@@ -20,9 +20,9 @@
     <script src="https://kit.fontawesome.com/711ecd1ff8.js" crossorigin="anonymous"></script>
     <!-- custom components -->
     <!-- <script src="./app/utils/photographerFactory.js" type="text/javascript"></script>
-    <script src="./app/utils/photographer.js" type="text/javascript"></script> -->
+        <script src="./app/utils/photographer.js" type="text/javascript"></script> -->
 
-    <link rel="stylesheet" href="./main.css" />
+    <!-- <link rel="stylesheet" href="./main.scss" /> -->
 </head>
 
 <body>
