Migration of code created in the 'no-webpack version' of project - phase 1

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Fisheye homepage</title>
+    <title>Fisheye homepage TEMPLATE</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <!-- Twitter Card data -->
@@ -31,18 +31,16 @@
             <div class="header__logo-wrapper">
                 <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
             </div>
-            <nav class="header__nav tags-list home" id="header-nav" aria-label="photographer categories" role="navigation">
+            <nav-tags-component></nav-tags-component>
+            <!-- <nav class="header__nav tags-list home" id="header-nav" aria-label="photographer categories" role="navigation">
                 <a href="" class="nav-tag" id="nav-tag">azds</a>
-                <a href="" class="nav-tag" id="nav-tag">ffdd</a>
-                <a href="" class="nav-tag" id="nav-tag">Ifdfdfd</a>
-                <a href="" class="nav-tag" id="nav-tag">fdfdfdfdfd</a>
-                <a href="" class="nav-tag" id="nav-tag">fdcx</a>
-                <a href="" class="nav-tag" id="nav-tag">rzazaza</a>
-                <a href="" class="nav-tag" id="nav-tag">nnnn</a>
-                <a href="" class="nav-tag" id="nav-tag">ppp</a>
-            </nav>
+            </nav> -->
         </header>
     </div>
+
+    <!-- TESTS -->
+
+    <!--  -->
 
     <main id="homepage-content" class="homepage-content">
         <div class="homepage-title">
