Migration of code created in the 'no-webpack version' of project - phase 1

--- a/src/template.html
+++ b/src/template.html
@@ -47,7 +47,7 @@
             <h1>Nos photographes</h1>
         </div>
         <section class="photographers" id="photographersList" aria-label="photographers presentation list">
-            <photographer-component></photographer-component>
+            <photographer-component currentPhotographer=""></photographer-component>
         </section>
 
         <!--  <div class="photographer photographer--home" id="photographer" aria-label="photographer presentation">
