HOMEPAGE - refactoring methods to an independant  HOME MODULE (module pattern) + adding base router

--- a/src/template.html
+++ b/src/template.html
@@ -23,28 +23,33 @@
 </head>
 
 <body>
-    <div class="header-wrapper">
-        <header class="header" role="banner" id="header">
-            <div class="header__logo-wrapper">
-                <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
+    <nav>
+        <a href="/">Home</a> -
+        <a href="#/sorted">Page 1</a> -
+    </nav>
+    <div id="homepage">
+        <div class="header-wrapper">
+            <header class="header" role="banner" id="header">
+                <div class="header__logo-wrapper">
+                    <a href="#" aria-label="Fisheye Home page"><img src="./assets/logo/logo.png" alt="Fisheye logo"></a>
+                </div>
+            </header>
+        </div>
+
+        <main id="homepage-content" class="homepage-content">
+            <div class="homepage-title">
+                <h1>Nos photographes</h1>
             </div>
-        </header>
+            <section class="photographers" id="photographersList" aria-label="photographers presentation list">
+
+            </section>
+
+            <div class="nav-help" id="nav-help">
+                <a href="" aria-label="go to main content"><span>passer au contenu</span></a>
+            </div>
+        </main>
     </div>
-
-    <main id="homepage-content" class="homepage-content">
-        <div class="homepage-title">
-            <h1>Nos photographes</h1>
-        </div>
-        <section class="photographers" id="photographersList" aria-label="photographers presentation list">
-
-        </section>
-
-        <div class="nav-help" id="nav-help">
-            <a href="" aria-label="go to main content"><span>passer au contenu</span></a>
-        </div>
-    </main>
-
-
+    
 </body>
 
 </html>
