--- a/src/template.html
+++ b/src/template.html
@@ -49,6 +49,12 @@
             </div>
         </main>
     </div>
+
+
+    <!-- TEMPORARY UNTIL ROUTER = SET UP -->
+    <div id="photographer-content" class="photographer-content-wrapper">
+
+    </div>
     
 </body>
 
