init PHOTOGRAPHER PAGE GALLERY in new configuration OK

--- a/src/template.html
+++ b/src/template.html
@@ -54,6 +54,8 @@
     <!-- TEMPORARY UNTIL ROUTER = SET UP -->
     <div id="photographer-content" class="photographer-content-wrapper">
 
+        <ul class="gallery" id="gallery-collection" aria-label="photo gallery">
+        </ul>
     </div>
     
 </body>
