adding LIGHTBOX component + DROPDOWN

--- a/src/template.html
+++ b/src/template.html
@@ -52,11 +52,24 @@
 
 
     <!-- TEMPORARY UNTIL ROUTER = SET UP -->
+    <!-- ---------------------------------- -->
+    <!-- PHOTOGRAPHER PAGE -->
+    <!-- ---------------------------------- -->
     <div id="photographer-content" class="photographer-content-wrapper">
 
         <ul class="gallery" id="gallery-collection" aria-label="photo gallery">
         </ul>
     </div>
+
+    <!-- ---------------------------------- -->
+    <!-- LIGHTBOX ( photographer slideshow) -->
+    <!-- ---------------------------------- -->
+    <div class="lightbox__main-wrapper">
+        <section class="carousel" id="carousel" aria-label="photographer gallery pictures">
+        </section>
+    </div>
+
+
     
 </body>
 
