FIX - issue with shadow dom elements style injecting from main.css = resolved (webpack css export config with content hash prevented elements href to find css in dist)

--- a/src/template.html
+++ b/src/template.html
@@ -19,7 +19,7 @@
     <!-- Font awesome cdn -->
     <script src="https://kit.fontawesome.com/711ecd1ff8.js" crossorigin="anonymous"></script>
 
-    <link src="./css/main.css" rel="stylesheet">
+    <link src="./main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
