adding copy-webpack-plugin => export assets to dist and reconnect imgs src from templates : homepage ok

--- a/src/template.html
+++ b/src/template.html
@@ -28,9 +28,9 @@
         <a href="#/photographer">go</a>
     </nav> -->
 
-    <div id="root">
+   <!--  <div id="root"> -->
 
-        <div id="homepage">
+        <!-- <div id="homepage"> -->
             <div class="header-wrapper">
                 <header class="header" role="banner" id="header">
                     <div class="header__logo-wrapper">
@@ -51,7 +51,7 @@
                     <a href="" aria-label="go to main content"><span>passer au contenu</span></a>
                 </div>
             </main>
-        </div>
+       <!--  </div> -->
 
 
         <!-- TEMPORARY UNTIL ROUTER = SET UP -->
@@ -75,7 +75,7 @@
             </div>
         </div>
         
-    </div>
+   <!--  </div> -->
 
 
 
