--- a/src/template.html
+++ b/src/template.html
@@ -50,42 +50,50 @@
                 <div class="nav-help" id="nav-help">
                     <a href="" aria-label="go to main content"><span>passer au contenu</span></a>
                 </div>
-            </main>
 
 
+                <!-- TEMPORARY UNTIL ROUTER = SET UP -->
+                <div id="photographer-content" class="photographer-content-wrapper">
 
-        <!-- TEMPORARY UNTIL ROUTER = SET UP -->
-        <!-- ---------------------------------- -->
-        <!-- PHOTOGRAPHER PAGE -->
-        <!-- ---------------------------------- -->
-            <main id="photographerPage" class="photographer-content-wrapper">
-                <section class="photographer photographer--page" id="photographer" aria-label="photographer presentation">
 
-                </section>
-
-                <!-- = <dropdown-component></dropdown-component> ==> To update ! -->
-                <div class="listbox-area">
-                    <p class="dropdown-menu-title">trier par</p>
-                    <div class="dropdown-menu" id="dropdown-menu" aria-label="sort gallery by">
-                        <button id="open-dropdown-btn" class="open-dropdown-btn" aria-haspopup="listbox" aria-labelledby="exp_elem exp_button">
-                            popularité
-                            <i class="fas fa-angle-down"></i>
-                            <i class="fas fa-angle-up"></i>
-                        </button> 
-                        <ul id="exp_elem_list" tabindex="-1" role="listbox" aria-labelledby="exp_elem" class="hidden">
-                            <li id="exp_date" role="option">date</li>
-                            <li id="exp_elem_Np" role="option">titre</li>
-                        </ul>
-                    </div>
                 </div>
 
 
-                <section class="gallery-wrapper" id="gallery-section" aria-label="photographer collection section">
-
-                </section>
-
-
             </main>
+
+
+
+        <!-- ---------------------------------- -->
+        <!-- PHOTOGRAPHER PAGE  SHOULD LOOK LIKE THIS -->
+        <!-- ---------------------------------- -->
+
+        <!--  <main id="photographerPage" class="photographer-content-wrapper">
+                    <section class="photographer photographer--page" id="photographer" aria-label="photographer presentation">
+
+                    </section>
+
+                    <div class="listbox-area">
+                        <p class="dropdown-menu-title">trier par</p>
+                        <div class="dropdown-menu" id="dropdown-menu" aria-label="sort gallery by">
+                            <button id="open-dropdown-btn" class="open-dropdown-btn" aria-haspopup="listbox" aria-labelledby="exp_elem exp_button">
+                                popularité
+                                <i class="fas fa-angle-down"></i>
+                                <i class="fas fa-angle-up"></i>
+                            </button> 
+                            <ul id="exp_elem_list" tabindex="-1" role="listbox" aria-labelledby="exp_elem" class="hidden">
+                                <li id="exp_date" role="option">date</li>
+                                <li id="exp_elem_Np" role="option">titre</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <section class="gallery-wrapper" id="gallery-section" aria-label="photographer collection section">
+
+                    </section>
+
+
+            </main> -->
 
 
 
